--- a/UD4_EX2/index.html
+++ b/UD4_EX2/index.html
@@ -82,7 +82,7 @@
                 </label>
               </div>
 
-              <div class="col-3 mx-3">
+              <div class="col-3 mx-4 mb-3">
                 <label for="radioImage3">
                   <img class="imgAvatar" src="img/image3.png" />
                   <input type="radio" name="radioImage" id="radioImage3" />
@@ -91,9 +91,9 @@
             </div>
           </div>
           <div class="col-12 mb-3">
-            <button class="btn formButton shadowButton">Reset avatar selection</button>
+            <button class="btn formButton transformButton">Reset avatar selection</button>
           </div>
-          <div class="col-12">
+          <div class="col-12 mt-4 mb-4">
             <button type="submit" class="btn formButton transitionButton mb-3">
               <strong> Confirm identity </strong>
             </button>
