ud4 ex1 + ud4 ex2

--- a/UD4_EX2/index.html
+++ b/UD4_EX2/index.html
@@ -26,6 +26,9 @@
     <main>
       <div class="container containerForm">
         <form class="row g-3">
+          <div class="col-12 my-3 formTitle">
+            <h2>Registration Form</h2>
+          </div>
           <div class="col-12">
             <label for="username"><strong>Username:</strong></label>
           </div>
@@ -70,22 +73,22 @@
             <div class="row">
               <div class="col-3 mx-3">
                 <label for="radioImage1">
-                  <img class="imgAvatar" src="img/image1.png" />
                   <input type="radio" name="radioImage" id="radioImage1"/>
+                  <img class="imgAvatar" src="img/image1.png" />
                 </label>
               </div>
 
               <div class="col-3 mx-1">
                 <label for="radioImage2">
-                  <img class="imgAvatar" src="img/image2.png" />
                   <input type="radio" name="radioImage" id="radioImage2" />
+                  <img class="imgAvatar" src="img/image2.png" />
                 </label>
               </div>
 
               <div class="col-3 mx-3 mb-3">
                 <label for="radioImage3">
-                  <img class="imgAvatar" src="img/image3.png" />
                   <input type="radio" name="radioImage" id="radioImage3" />
+                  <img class="imgAvatar" src="img/image3.png" />
                 </label>
               </div>
             </div>
