--- a/UD4_EX1/index.html
+++ b/UD4_EX1/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
@@ -25,6 +26,9 @@
     <main>
       <div class="container containerForm">
         <form class="row g-3">
+          <div class="col-12 my-3 formTitle">
+            <h2>Registration Form</h2>
+          </div>
           <div class="col-12">
             <label for="username"><strong>Username:</strong></label>
           </div>
@@ -69,36 +73,39 @@
             <div class="row">
               <div class="col-3 mx-3">
                 <label for="radioImage1">
+                  <input type="radio" name="radioImage" id="radioImage1"/>
                   <img class="imgAvatar" src="img/image1.png" />
                 </label>
-                <input type="radio" name="radioImage" id="radioImage1"/>
               </div>
 
               <div class="col-3 mx-1">
                 <label for="radioImage2">
+                  <input type="radio" name="radioImage" id="radioImage2" />
                   <img class="imgAvatar" src="img/image2.png" />
                 </label>
-                <input type="radio" name="radioImage" id="radioImage2" />
               </div>
 
-              <div class="col-3 mx-3">
+              <div class="col-3 mx-3 mb-3">
                 <label for="radioImage3">
+                  <input type="radio" name="radioImage" id="radioImage3" />
                   <img class="imgAvatar" src="img/image3.png" />
                 </label>
-                <input type="radio" name="radioImage" id="radioImage3" />
               </div>
             </div>
           </div>
           <div class="col-12 mb-3">
-            <button class="btn formButton">Reset avatar selection</button>
+            <button class="btn formButton transformButton">Reset avatar selection</button>
           </div>
-          <div class="col-12">
-            <button type="submit" class="btn formButton mb-3">
+          <div class="col-12 mt-4 mb-4">
+            <button type="submit" class="btn formButton transitionButton mb-3">
               <strong> Confirm identity </strong>
             </button>
           </div>
         </form>
       </div>
     </main>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+    </style>
   </body>
 </html>
