ex 3 ud 4 with less

--- a/UD1_EX4/mainPage.html
+++ b/UD1_EX4/mainPage.html
@@ -14,7 +14,7 @@
   <div class="mainHeader">
     <div class="row">
       <div class="col col1">
-        <img class="logoVertical" src="logoGimpVertical.png" />
+        <img class="logoVertical" src="img/logoGimpVertical.png" />
       </div>
       <div class="col mainColumn">
         <div class="mainLogo">
@@ -33,7 +33,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <img class="imgUser" src="user.png">
+            <img class="imgUser" src="img/user.png">
           </div>
         </div>
         
@@ -42,34 +42,36 @@
   </div>
   <div class="row">
     <div class="col">
-      <div class="card-md-9 cardArticles">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="fff.png" class="img-fluid rounded-start articleImage" />
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title articleTitle">Title</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Rerum ducimus dignissimos inventore ratione, voluptatum
-                repellat aliquam cupiditate facilis ullam ad similique quae
-                quos eveniet dolor quam, quas impedit odio expedita ex
-                doloribus consectetur! Labore impedit eveniet, consequatur
-                reprehenderit aliquid dolorem eius sequi quod sunt,
-                repudiandae, quidem rerum! Dolorem blanditiis illo repellat
-                soluta perferendis tempore nesciunt, a magni dolore, quasi
-                aperiam possimus. Unde pariatur corporis numquam velit omnis
-                et ex dolorem, quos necessitatibus labore perspiciatis,
-                placeat corrupti sunt quis veniam! Eius.
-              </p>
+      <a href="../UD4_EX3/article.html">
+        <div class="card-md-9 cardArticles">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="img/fff.png" class="img-fluid rounded-start articleImage" />
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title articleTitle">Title</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Rerum ducimus dignissimos inventore ratione, voluptatum
+                  repellat aliquam cupiditate facilis ullam ad similique quae
+                  quos eveniet dolor quam, quas impedit odio expedita ex
+                  doloribus consectetur! Labore impedit eveniet, consequatur
+                  reprehenderit aliquid dolorem eius sequi quod sunt,
+                  repudiandae, quidem rerum! Dolorem blanditiis illo repellat
+                  soluta perferendis tempore nesciunt, a magni dolore, quasi
+                  aperiam possimus. Unde pariatur corporis numquam velit omnis
+                  et ex dolorem, quos necessitatibus labore perspiciatis,
+                  placeat corrupti sunt quis veniam! Eius.
+                </p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      </a>
     </div>
     <div class="col-md-2">
-      <img class="likeImage" src="heart.png">
+      <img class="likeImage" src="img/heart.png">
     </div>
     <div class="card topicBox">
       <ul class="list-group list-group-flush">
@@ -103,66 +105,71 @@
       </ul>
     </div>
     <div class="col-md-2">
-      <img class="likeImage2" src="heart.png">
+      <img class="likeImage2" src="img/heart.png">
     </div>
     <div class="col">
-      <div class="card-md-9 cardArticles">
-        <div class="row g-0">
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title articleTitle">Title</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Rerum ducimus dignissimos inventore ratione, voluptatum
-                repellat aliquam cupiditate facilis ullam ad similique quae
-                quos eveniet dolor quam, quas impedit odio expedita ex
-                doloribus consectetur! Labore impedit eveniet, consequatur
-                reprehenderit aliquid dolorem eius sequi quod sunt,
-                repudiandae, quidem rerum! Dolorem blanditiis illo repellat
-                soluta perferendis tempore nesciunt, a magni dolore, quasi
-                aperiam possimus. Unde pariatur corporis numquam velit omnis
-                et ex dolorem, quos necessitatibus labore perspiciatis,
-                placeat corrupti sunt quis veniam! Eius.
-              </p>
+      <a href="../UD4_EX3/article.html">
+        <div class="card-md-9 cardArticles">
+          <div class="row g-0">
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title articleTitle">Title</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Rerum ducimus dignissimos inventore ratione, voluptatum
+                  repellat aliquam cupiditate facilis ullam ad similique quae
+                  quos eveniet dolor quam, quas impedit odio expedita ex
+                  doloribus consectetur! Labore impedit eveniet, consequatur
+                  reprehenderit aliquid dolorem eius sequi quod sunt,
+                  repudiandae, quidem rerum! Dolorem blanditiis illo repellat
+                  soluta perferendis tempore nesciunt, a magni dolore, quasi
+                  aperiam possimus. Unde pariatur corporis numquam velit omnis
+                  et ex dolorem, quos necessitatibus labore perspiciatis,
+                  placeat corrupti sunt quis veniam! Eius.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <img src="img/fff.png" class="img-fluid rounded-start articleImage2" />
             </div>
           </div>
-          <div class="col-md-4">
-            <img src="fff.png" class="img-fluid rounded-start articleImage2" />
-          </div>
         </div>
-      </div>
+      </a>
     </div>  
   </div>
   <div class="row">
     <div class="col">
-      <div class="card-md-9 cardArticles">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="fff.png" class="img-fluid rounded-start articleImage" />
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title articleTitle">Title</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Rerum ducimus dignissimos inventore ratione, voluptatum
-                repellat aliquam cupiditate facilis ullam ad similique quae
-                quos eveniet dolor quam, quas impedit odio expedita ex
-                doloribus consectetur! Labore impedit eveniet, consequatur
-                reprehenderit aliquid dolorem eius sequi quod sunt,
-                repudiandae, quidem rerum! Dolorem blanditiis illo repellat
-                soluta perferendis tempore nesciunt, a magni dolore, quasi
-                aperiam possimus. Unde pariatur corporis numquam velit omnis
-                et ex dolorem, quos necessitatibus labore perspiciatis,
-                placeat corrupti sunt quis veniam! Eius.
-              </p>
+      <a href="../UD4_EX3/article.html">
+        <div class="card-md-9 cardArticles">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="img/fff.png" class="img-fluid rounded-start articleImage" />
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title articleTitle">Title</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Rerum ducimus dignissimos inventore ratione, voluptatum
+                  repellat aliquam cupiditate facilis ullam ad similique quae
+                  quos eveniet dolor quam, quas impedit odio expedita ex
+                  doloribus consectetur! Labore impedit eveniet, consequatur
+                  reprehenderit aliquid dolorem eius sequi quod sunt,
+                  repudiandae, quidem rerum! Dolorem blanditiis illo repellat
+                  soluta perferendis tempore nesciunt, a magni dolore, quasi
+                  aperiam possimus. Unde pariatur corporis numquam velit omnis
+                  et ex dolorem, quos necessitatibus labore perspiciatis,
+                  placeat corrupti sunt quis veniam! Eius.
+                </p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      </a>
+      
     </div>
     <div class="col-md-2">
-      <img class="likeImage" src="heart.png">
+      <img class="likeImage" src="img/heart.png">
     </div>
     <div class="card topicBox">
       <ul class="list-group list-group-flush">
