--- a/UD4_EX3/article.html
+++ b/UD4_EX3/article.html
@@ -13,36 +13,70 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container article">
-      <div class="row">
-        <div class="col-4">
-          <img src="images/image.png" class="articleImage" alt="" />
-        </div>
-        <div class="col-8">
-          <div class="row my-4">
-            <div class="col-12">
-              <h1>Article Title</h1>
+    <header>
+      <div class="container-fluid">
+        <div class="mainHeader">
+          <div class="row">
+            <div class="col-md-11">
+              <img class="logoVertical" src="img/logoGimpHoritzontal.png" />
             </div>
-            <div class="col-12">
-              <article>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Assumenda asperiores adipisci natus doloribus mollitia at
-                exercitationem ducimus, ipsum, consequuntur iusto esse dolorem
-                unde veniam cum perferendis incidunt animi, magni sit impedit
-                minima molestias? Nesciunt quidem nam quam debitis illum vel
-                earum sequi placeat ab ipsum quod non distinctio, natus
-                voluptatum, vero facere ex quae sapiente deserunt, autem
-                eveniet! Aut sapiente beatae harum, pariatur, veritatis
-                aspernatur laboriosam quibusdam inventore reiciendis et vitae
-                odit at ipsum, enim modi deserunt officia provident fugiat
-                aperiam saepe reprehenderit voluptates perspiciatis! Architecto
-                ducimus eos quae aliquid porro corporis fuga perferendis facere,
-                corrupti illum rem alias sapiente.
-              </article>
+            <div class="col-md-1">
+              <button class="button btn">
+                <a href="../UD1_EX4/mainPage.html">Home</a>
+              </button>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </header>
+    <main>
+      <div class="container article mb-5">
+        <div class="row">
+          <div class="col-xl-4 col-lg-6">
+            <img src="img/image.png" class="articleImage" alt="" />
+          </div>
+          <div class="col-xl-8 col-lg-6">
+            <div class="row my-4">
+              <div class="col-12">
+                <h1>Article Title</h1>
+              </div>
+              <div class="col-12">
+                <article>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Assumenda asperiores adipisci natus doloribus mollitia at
+                  exercitationem ducimus, ipsum, consequuntur iusto esse dolorem
+                  unde veniam cum perferendis incidunt animi, magni sit impedit
+                  minima molestias? Nesciunt quidem nam quam debitis illum vel
+                  earum sequi placeat ab ipsum quod non distinctio, natus
+                  voluptatum, vero facere ex quae sapiente deserunt, autem
+                  eveniet! Aut sapiente beatae harum, pariatur, veritatis
+                  aspernatur laboriosam quibusdam inventore reiciendis et vitae
+                  odit at ipsum, enim modi deserunt officia provident fugiat
+                  aperiam saepe reprehenderit voluptates perspiciatis!
+                  Architecto ducimus eos quae aliquid porro corporis fuga
+                  perferendis facere, corrupti illum rem alias sapiente.
+                </article>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-3 col-md-6">
+            <div class="topics">Topic 1</div>
+          </div>
+          <div class="col-xl-3 col-md-6">
+            <div class="topics">Topic 2</div>
+          </div>
+          <div class="col-xl-3 col-md-6">
+            <div class="topics">Topic 3</div>
+          </div>
+          <div class="col-xl-3 col-md-6">
+            <div class="topics">Topic 4</div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
