--- a/UD4_EX3/article.html
+++ b/UD4_EX3/article.html
@@ -9,7 +9,8 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="style_less.css" /> -->
+    <link rel="stylesheet" href="style_sass.css" />
     <title>Document</title>
   </head>
   <body>
@@ -61,19 +62,25 @@
           </div>
         </div>
       </div>
-      <div class="container">
-        <div class="row">
+      <div class="container topicsContainer">
+        <div class="row my-4">
+          <div class="col-12">
+            <strong><h1>TOPICS:</h1></strong>
+          </div>
+        </div>
+
+        <div class="row mb-3">
           <div class="col-xl-3 col-md-6">
-            <div class="topics">Topic 1</div>
+            <div class="topicBox"><strong>Topic 1</strong></div>
           </div>
           <div class="col-xl-3 col-md-6">
-            <div class="topics">Topic 2</div>
+            <div class="topicBox"><strong>Topic 2</strong></div>
           </div>
           <div class="col-xl-3 col-md-6">
-            <div class="topics">Topic 3</div>
+            <div class="topicBox"><strong>Topic 3</strong></div>
           </div>
           <div class="col-xl-3 col-md-6">
-            <div class="topics">Topic 4</div>
+            <div class="topicBox"><strong>Topic 4</strong></div>
           </div>
         </div>
       </div>
