--- a/UD4_EX3/test/index.html
+++ b/UD4_EX3/test/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <button class="btn btn-primary">Hola</button>
-    
+    <button class="btn btn-secondary">Hola</button>
 </body>
 </html>
