--- a/indexedDB/index.html
+++ b/indexedDB/index.html
@@ -103,9 +103,9 @@
           </div>
           <div class="col-12 mt-4 mb-4">
             <button
-            value="Register"
-              type="submit"
-              class="btn btn-primary formButton transitionButton mb-3"
+            id="sendData"
+            onclick="sendData()"
+            class="btn btn-primary formButton transitionButton mb-3"
             >
             <strong>Register</strong>
             </button>
@@ -113,5 +113,6 @@
         </form>
       </div>
     </main>
+    <script src="script/script.js"></script>
   </body>
 </html>
