--- a/indexedDB/index.html
+++ b/indexedDB/index.html
@@ -41,6 +41,7 @@
               placeholder="peter123"
             />
           </div>
+          <small class="col-12 mb-4">Error message</small>
           <div class="col-12">
             <label for="useremail"><strong>Email:</strong></label>
           </div>
@@ -53,6 +54,7 @@
               placeholder="email@example.com"
             />
           </div>
+          <small class="col-12 mb-4">Error message</small>
           <div class="col-12">
             <label for="userpwd">
               <strong>Password:</strong>
@@ -67,6 +69,7 @@
               placeholder="Password"
             />
           </div>
+          <small class="col-12 mb-4">Error message</small>
           <div class="col-12">
             <label for="avatar"
               ><strong>Choose your profile picture:</strong></label
@@ -103,8 +106,7 @@
           </div>
           <div class="col-12 mt-4 mb-4">
             <button
-            id="sendData"
-            onclick="sendData()"
+            id="register"
             class="btn btn-primary formButton transitionButton mb-3"
             >
             <strong>Register</strong>
