--- a/indexedDB/index.html
+++ b/indexedDB/index.html
@@ -25,7 +25,7 @@
     </header>
     <main>
       <div class="container containerForm">
-        <form id="form" class="row g-3">
+        <div id="form" class="row g-3">
           <div class="col-12 my-3 formTitle">
             <h2>Registration Form</h2>
           </div>
@@ -116,7 +116,7 @@
             <strong>Register</strong>
             </button>
           </div>
-        </form>
+        </div>
       </div>
     </main>
     <script src="script/script.js"></script>
