--- a/UD4_EX3/article.html
+++ b/UD4_EX3/article.html
@@ -23,7 +23,7 @@
             </div>
             <div class="col-md-1">
               <button class="button btn">
-                <a href="../UD1_EX4/mainPage.html">Home</a>
+                <a href="../mainPage/mainPage.html">Home</a>
               </button>
             </div>
           </div>
