--- a/indexedDB/index.html
+++ b/indexedDB/index.html
@@ -49,7 +49,7 @@
             <input
               id="useremail"
               class="input-type"
-              type="text"
+              type="email"
               name="useremail"
               placeholder="email@example.com"
             />
@@ -78,22 +78,22 @@
             <div class="row">
               <div class="col-3 mx-3">
                 <label for="radioImage1">
-                  <input type="radio" name="radioImage" id="radioImage1" />
+                  <input type="radio" name="radioImage" id="radioImage1" path1="img/image1.png"/>
                   <img class="imgAvatar" src="img/image1.png" />
                 </label>
               </div>
 
               <div class="col-3 mx-1">
                 <label for="radioImage2">
-                  <input type="radio" name="radioImage" id="radioImage2" />
-                  <img class="imgAvatar" src="img/image2.png" />
+                  <input type="radio" name="radioImage" id="radioImage2" path2="img/image2.png"  />
+                  <img class="imgAvatar" src="img/image2.png"/>
                 </label>
               </div>
 
               <div class="col-3 mx-3 mb-3">
                 <label for="radioImage3">
-                  <input type="radio" name="radioImage" id="radioImage3" />
-                  <img class="imgAvatar" src="img/image3.png" />
+                  <input type="radio" name="radioImage" id="radioImage3" path3="img/image3.png"  />
+                  <img class="imgAvatar" src="img/image3.png"/>
                 </label>
               </div>
             </div>
