--- a/Project/adminPage/index.html
+++ b/Project/adminPage/index.html
@@ -7,12 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ADMIN PAGE</h1>
-    <div class="container-users" id="container-users">
-        <ul id="users">
-
-        </ul>
-    </div>
+    <header>
+        <h1>ADMIN PAGE</h1>
+    </header>
+    <main>
+        <div class="container-users" id="container-users">
+            <ul id="users-ul">
+            </ul>
+        </div>
+    </main>
     <script src="script/script.js"></script>
 </body>
 </html>
