--- a/Project/mainPage/mainPage.html
+++ b/Project/mainPage/mainPage.html
@@ -28,7 +28,7 @@
                     <a href="#">Log In</a>
                   </button>
                   <button class="btn btnLogIn" id="editUser" type="submit">
-                    <a href="#">Edit User</a>
+                    <a href="../editUser/editUser.html">Edit User</a>
                   </button>
                 </div>
                 <div class="col-4">
